# particles

./: .gitignore  LICENSE  README.md  meson.build
include/: grid.hpp  menu.hpp  particle_source.hpp  renderer.hpp  shader.hpp  texture.hpp
shaders/: compute.glsl  fragment.glsl  geometry.glsl  grid_fragment.glsl  grid_vertex.glsl  vertex.glsl
src/: glad.cpp  grid.cpp  main.cpp  menu.cpp  particle_source.cpp  renderer.cpp  shader.cpp  texture.cpp
